Spec Issue 27196: Add columns/horizontal scrolling  - Reformat status/date column to reflect Artefact's mockup

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -439,6 +439,10 @@ img.detail-has-data-small {
     .detail-black-text {
       color: $black;
     }
+
+    td:nth-child(1) {
+      padding-right: 1em;
+    }
   }
 
   &:hover {
